<resources>
    <string name="app_name">Spt</string>
    <string name="name">Саранский Политехнический техникум</string>
    <string name="otx1">История техникума – это история преобразований, совершенствований, качественной подготовки кадров, побед.</string>
    <string name="otx2">Саранский политехнический техникум одно из старейших учебных заведений в Мордовии. Техникум был образован в мае 1941 года, когда было открыто Ремесленное училище №2.</string>
    <string name="otx3">Первыми учениками техникума были дети, эвакуированные из г. Ленинграда и г. Орши. Большинство первых преподавателей и мастеров были участниками Великой отечественной войны, демобилизованные с фронта по ранению. Первые выпускники старались попасть на фронт. Ребята с гордостью носили форму Ремесленного училища. Да и было чем гордиться, трудно сосчитать, сколько раз ученики мастеров производственного обучения Комарницкого В.А., Стешина А.И., Зимулькина А.П., Маслова А.Б. пополняли копилку призовых мест, выступая на конкурсах «Лучший по профессии» не только в Республике, но и на зональных и Российских конкурсах. В 50– 60-е годы здесь был лучший духовой оркестр с прекрасными солистами из числа учащихся и преподавателей.</string>
    <string name="otx4"><b>17.05.1963</b> года оно было переименовано в Городское профессионально-техническое училище № 1. Приказ № 136 от 17.05.63 г. по УПТО РМ.</string>
    <string name="otx5"><b>20.03.1972</b> года ГПТУ № 1 переименовано в Техническое училище № 4. Приказ № 59 от 20.03.72 г. по УПТО РМ.</string>
    <string name="otx6"><b>20.09.1984</b> года Техническое училище № 4 переименовано в Среднее профессионально — техническое училище № 21. Приказ № 291 от 20.09.84 г. по УПТО РМ.</string>
    <string name="otx7"><b>23.05.1989</b> года Среднее профессионально — техническое училище № 21 переименовано в Профессионально — техническое училище № 121. Приказ № 175 от 23.05.89 г. Министерства образования РМ.</string>
    <string name="otx8"><b>29.06.1990</b>> года Профессионально — техническое училище № 121 реорганизовано в Высшее профессиональное училище № 21. Приказ Министерства народного образования РСФСР № 187 от 29.06.1990 г.</string>
    <string name="otx9"><b>20.07.1995</b> года Приказом Министерства образования РМ № 186 от 20.07.95 г. присвоен статус «Саранский профессиональный лицей № 21».</string>
    <string name="otx10">Для подготовки квалифицированных специалистов техникум располагает необходимой учебно- материальной базой и грамотным инженерно-педагогическим коллективом. О качественной профессиональной подготовке свидетельствуют результаты конкурсов профессионального мастерства и предметных олимпиад среди учреждений профессионального образования. На протяжении последних 20 лет учащиеся техникума – постоянные победители по профессиям: станочник, фрезеровщик, электромонтер, слесарь, парикмахер, повар. В техникуме созданы условия не только для профессиональной подготовки, но и для всестороннего гармоничного развития личности, так как техникум является центром воспроизводства квалифицированных специалистов и культурного потенциала Республики.</string>
    <string name="otx11">В 2007 году в конкурсном отборе учебных заведений в рамках Приоритетного Национального проекта «Образование» коллектив Проф. лицея под руководством директора М. Е. Голикова выиграл Гранд, 40 млн. рублей на приобретение высокотехнологичного оборудования.</string>
    <string name="otx12">Как инновационному учебному заведению лицею в 2010 году присвоен статус «Саранский политехнический техникум».</string>
    <string name="one_menu">Расписание</string>
    <string name="two_menu">Специальности</string>
    <string name="three_menu">О техникуме</string>
    <string name="four_menu">Студентам</string>
    <string name="five_menu">Преподователи</string>
    <string name="six_menu">О нас</string>
    <string name="back">Назад</string>
    <string name="spec1">Организация обслуживания в общественном питании</string>
    <string name="spec2">Технология парикмахерского исскуства</string>
    <string name="spec3">Гостиничное дело</string>
    <string name="spec4">Технология металлообрабатывающего производства</string>
    <string name="spec5">Информационные системы и программирование</string>
    <string name="spec6">Повар, кондитер</string>
    <string name="spec7">Оператор станков с программным управлением</string>
    <string name="abit1">Документы о приемной комиссии 2022</string>
    <string name="abit2">Инфромация о специальностях для поступающих</string>
    <string name="prepod1">Максин Эрнест Вячеславович</string>
    <string name="prepod2">Бутяйкина Альбина Дмитриевна</string>
    <string name="prepod3">Козлов Сергей Иванович</string>
    <string name="prepod4">Носова Татьяна Владимировна</string>
    <string name="prepod5">Жебанова Вера Владимировна</string>
    <string name="prepod6">Корецкая Елена Александровна</string>
    <string name="prepod7">Альканова Екатерина Ивановна</string>
    <string name="prepod8">Сивов Дмитрий Николаевич</string>
    <string name="prepod9">Щербакова Ольга Владимировна</string>
    <string name="prepod10">Василькина Татьяна Николаевна</string>
    <string name="prepod11">Бойцова Наталья Сергеевна</string>
    <string name="prepod12">Китова Ольга Вячнславовна</string>
    <string name="prepod13">Суродеева Марина Викторовна</string>
    <string name="prepod14">Термасова Людмила Александровна</string>
    <string name="prepod15">Денисова Галина Ивановна</string>
    <string name="prepod16">Старченкова Галина Борисовна</string>
    <string name="prepod17">Ефремкина Лариса Ивановна</string>
    <string name="prepod18">Сеитова Елена Александровна</string>
    <string name="prepod19">Киреева Ирина Вячеславовна</string>
    <string name="prepod20">Рассказова Наталья Ивановна</string>
    <string name="prepod21">Клешина Наталья Николаевна</string>
    <string name="prepod22">Пелина Тамара Александровна</string>
    <string name="prepod23">Давыдова Оксана Николаевна</string>
    <string name="prepod24">Зверева Елизавета Алексеевна</string>
    <string name="prepod25">Караваева Мария Михайловна</string>
    <string name="prepod26">Урекина Татьяна Владимировна</string>
    <string name="prepod27">Ананьева Ольга Михайловна</string>
    <string name="prepod28">Горлышкина Наталья Александровна</string>
    <string name="prepod29">Оксин Даниил Владимирович</string>
    <string name="prepod30">Судуткина Наталья Ивановна</string>
    <string name="prepod31">Федякова Ольга Михайловна</string>
    <string name="prepod32">Каштанов Евгений Викторович</string>
    <string name="pinfo1">
        <b>Преподаватель дисциплин профессионального цикла</b>
        <b>\nОбразование:</b>высшее, МГУ Рузаевский институт машиностроения
        <b>\nОбщий стаж:</b>31 год
        <b>\nСтаж работы по специальности:</b>30 лет
        <b>\nВысшая квалификационная категория</b>
    </string>
    <string name="pinfo2"><b>Преподаватель иностранного языка</b>
        <b>\nОбразование:</b> высшее,  МГУ им.Н.П. Огарева, филолог, преподаватель немецкого языка и литературы,  переводчик
        <b>\nОбщий стаж:</b>35 лет
        <b>\nСтаж работы по специальности:</b>32 года
        <b>\nВысшая квалификационная категория</b>
    </string>
    <string name="pinfo3">
        <b>Руководитель физической культуры, руководитель физвоспитания</b>
        <b>\nОбразование:</b> Высшее -Мордовский педагогический институт им.М.Е.Евсевьева Учитель физкультуры
        <b>\nОбщий стаж работы:</b> 42 года
        <b>\nСтаж работы по специальности:</b> 28 лет
        <b>\nВысшая квалификационная категория</b>
</string>
    <string name="pinfo4">
        <b>\nПреподаватель информатики</b>
        <b>\nОбразование:</b> МГПИ им.М.Е.Евсевьева, учитель математики и информатики
        <b>\nОбщий стаж:</b> 20 лет
        <b>\nСтаж работы по специальности:</b> 20 лет
        <b>\nВысшая квалификационная категория</b>
</string>
    <string name="pinfo5">
        <b>\nПреподаватель общепрофессиональных дисциплин</b>
        <b>\nОбразование:</b> МГУ им. Н.П.Огарева, специальность: математика, преподаватель
        <b>\nОбщий стаж:</b> 31 лет
        <b>\nСтаж работы по специальности:</b> 29 лет
        <b>\nВысшая квалификационная категория</b>
    </string>
    <string name="pinfo6">
        <b>\nПреподаватель дисциплин профессионального цикла</b>
        <b>\nОбразование:</b> высшее, МГПИ им. М.Е. Евсевьева
        <b>\nОбщий стаж:</b> 25 года
        <b>\nСтаж работы по специальности: 24 года</b>
</string>
    <string name="pinfo7">
        <b>\nПреподаватель</b>
        <b>\nОбразование:</b> высшее, МГУ им. Н.П. Огарева; МГПИ им.М.Е Евсевьева, Магистр педагогического образования
        <b>\nОбщий педагогический стаж:</b> 5 лет
        <b>\nВысшая квалификационная категория</b>
</string>
    <string name="pinfo8">
        <b>\nПреподаватель истории</b>
        <b>\nОбразование:</b> высшее, МГПИ им. М.Е. Евсевьева, история, право
        <b>\nОбщий педагогический стаж:</b> 3 года
</string>
    <string name="pinfo9">
        <b>\nПреподаватель иностранного языка</b>
        <b>\nОбразование:</b> высшее, МГУ им. Н. П. Огарёва, лингвистика, филология, теория и методика преподавания иностранных языков
        <b>\nОбщий педагогический стаж:</b> 3 года
    </string>
    <string name="pinfo10">
        <b>\nПреподаватель информатики</b>
        <b>\nОбразование:</b> МГУ им. Н.П Огарева. Институт электроники и светотехники. Направление Электроника и наноэлектроника.
        <b>\nОбщий педагогический стаж:</b> 3 год
</string>
    <string name="pinfo11">
        <b>\nПреподаватель</b>
        <b>\nОбразование:</b> Высшее
        <b>\nПедагогический стаж:</b> 9 лет
        <b>\nОбщий стаж:</b> 20 лет
    </string>
    <string name="pinfo12">1</string>
    <string name="pinfo13">
        <b>\nПреподаватель специальных дисциплин</b>
        <b>\nОбразование:</b> высшее, Мордовский государственный педагогический институт имени М. Е. Евьсевьева, специальность Информатика. Математика
        <b>\nОбщий педагогический стаж:</b> 2 года
        <b>\nСтаж работы по специальности:</b> 1 год
    </string>
    <string name="pinfo14">
        <b>\nПреподаватель математики</b>
        <b>\nОбразование:</b> МГПИ им. М. Е. Евсевьева, учитель математики и информатики
        <b>\nОбщий стаж:</b> 2 года
        <b>\nСтаж работы по специальности:</b> 2 года
</string>
    <string name="pinfo15">
        <b>\nПреподаватель дисциплин естественно-научного цикла</b>
        <b>\nОбразование:</b> высшее, МГПИ им. М.Е.Евсевьева
        <b>\nОбщий  стаж:</b> 26 лет
        <b>\nСтаж работы по специальности:</b> 26 лет
        <b>\nВысшая квалификационная категория</b>
</string>
    <string name="pinfo16">
        <b>\nПреподаватель дисциплин профессионального цикла</b>
        <b>\nОбразование:</b> высшее, МГУ им. Н.П.Огарева
        <b>\nОбщий стаж:</b> 41 год
        <b>\nСтаж работы по специальности:</b> 39 лет
        <b>\nВысшая квалификационная категория</b>
</string>
    <string name="pinfo17">
        <b>\nПреподаватель дисциплин профессионального цикла</b>
<b>\nОбразование:</b> Высшее — МГУ им. Н.П. Огарева, Инженер-механик
        <b>\nОбщий стаж:</b> 33 год
        <b>\nСтаж работы по специальности:</b> 12 лет
        <b>\nВысшая квалификационная категория</b>
    </string>
    <string name="pinfo18"><b>\nПреподаватель общественных дисциплин</b>
<b>\nОбразование:</b> Моровский ордена Дружбы народов госуниверситет им.Н.П.Огарева Географ, преподаватель географии
        <b>\nОбщий стаж:</b> 34 года
        <b>\nСтаж работы по профессии:</b> 34 года
        <b>\nВысшая квалификационная категория</b>
    </string>
    <string name="pinfo19">
        <b>\nПреподаватель физической культуры</b>
        <b>\nОбразование:</b> Мордовский педагогический институт им.М.Е.Евсевьева Педагог по физич.культуре и спорту
        <b>\nОбщий  стаж:</b> 16 лет
        <b>\nСтаж работы по специальности:</b> 16 лет
</string>
</resources>