<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".teachers"
    android:background="@drawable/kruglie_ygli">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/custom_button"
            android:onClick="back"
            android:text="@string/back"
            android:textColor="@color/sptone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/spt_logo2" />



    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">



            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/prepod1"
                android:textColor="@color/sptone"
                android:onClick="t1"
                />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/prepod2"
                android:textColor="@color/sptone"
                android:onClick="t2"

                />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/prepod3"
                android:textColor="@color/sptone"
                android:onClick="t3"
                />

            <Button
                android:id="@+id/button10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/prepod4"
                android:textColor="@color/sptone"
                android:onClick="t4"
                />

            <Button
                android:id="@+id/button11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/prepod5"
                android:textColor="@color/sptone"
                android:onClick="t5"
                />

            <Button
                android:id="@+id/button12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/prepod6"
                android:textColor="@color/sptone"
                android:onClick="t6"
                />

            <Button
                android:id="@+id/button13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/prepod7"
                android:textColor="@color/sptone"
                android:onClick="t7"
                />

            <Button
                android:id="@+id/button14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/prepod8"
                android:textColor="@color/sptone"
                android:onClick="t8"
                />

            <Button
                android:id="@+id/button15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/prepod9"
                android:textColor="@color/sptone"
                android:onClick="t9"
                />

            <Button
                android:id="@+id/button16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/prepod10"
                android:textColor="@color/sptone"
                android:onClick="t10"
                />

            <Button
                android:id="@+id/button17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/prepod11"
                android:textColor="@color/sptone"
                android:onClick="t11"
                />

            <Button
                android:id="@+id/button18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/prepod12"
                android:textColor="@color/sptone"
                android:onClick="t12"
                />

            <Button
                android:id="@+id/button19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/prepod13"
                android:textColor="@color/sptone"
                android:onClick="t13"
                />

            <Button
                android:id="@+id/button20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/prepod14"
                android:textColor="@color/sptone"
                android:onClick="t14"
                />

            <Button
                android:id="@+id/button21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/prepod15"
                android:textColor="@color/sptone"
                android:onClick="t15"
                />

            <Button
                android:id="@+id/button22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/prepod16"
                android:textColor="@color/sptone"
                android:onClick="t16"
                />

            <Button
                android:id="@+id/button23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/prepod17"
                android:textColor="@color/sptone"
                android:onClick="t17"
                />

            <Button
                android:id="@+id/button24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/prepod18"
                android:textColor="@color/sptone"
                android:onClick="t18"
                />

            <Button
                android:id="@+id/button25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/prepod19"
                android:textColor="@color/sptone"
                android:onClick="t19"
                />

            <Button
                android:id="@+id/button26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/prepod20"
                android:textColor="@color/sptone"
                android:onClick="t20"
                />

            <Button
                android:id="@+id/button27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/prepod21"
                android:textColor="@color/sptone"
                android:onClick="t21"
                />

            <Button
                android:id="@+id/button28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/prepod22"
                android:textColor="@color/sptone"
                android:onClick="t22"
                />

            <Button
                android:id="@+id/button29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/prepod23"
                android:textColor="@color/sptone"
                android:onClick="t23"
                />

            <Button
                android:id="@+id/button30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/prepod24"
                android:textColor="@color/sptone"
                android:onClick="t24"
                />

            <Button
                android:id="@+id/button31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/prepod25"
                android:textColor="@color/sptone"
                android:onClick="t25"
                />

            <Button
                android:id="@+id/button32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/prepod26"
                android:textColor="@color/sptone"
                android:onClick="t26"
                />

            <Button
                android:id="@+id/button33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/prepod27"
                android:textColor="@color/sptone"
                android:onClick="t27"
                />

            <Button
                android:id="@+id/button033"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/prepod28"
                android:textColor="@color/sptone"
                android:onClick="t28"
                />

            <Button
                android:id="@+id/button45"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/prepod29"
                android:textColor="@color/sptone"
                android:onClick="t29"
                />

            <Button
                android:id="@+id/button35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/prepod30"
                android:textColor="@color/sptone"
                android:onClick="t30"


                />

            <Button
                android:id="@+id/button36"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/prepod31"
                android:textColor="@color/sptone"
                         android:onClick="t31"
                />

            <Button
                android:id="@+id/button37"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/prepod32"
                android:textColor="@color/sptone"
                         android:onClick="t32"
                />



        </LinearLayout>
        </ScrollView>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>